--- a/g4_frogriders/index.html
+++ b/g4_frogriders/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src = assets/js/modal.js></script>
+    <script src="assets/js/frog.js"></script>
+    <script src="assets/js/player.js"></script>
+    <script src="assets/js/board.js"></script>
+    <script src="assets/js/main.js"></script>
 
+
+    <title>Frogriders</title>
+    <!-- <link rel="stylesheet" href="../frogriders/assets/css/style.css"> -->
+</head>
+<body>
+    <header>Frogrider Online!</header>
+    <div class="gameBoard">
+
+    </div>
+
+    <div class="stats">
+        <div class="player1">
+            <div id="player1"></div>
+        </div>
+        <div class="player2">
+            <div id="player2"></div>
+        </div>
+    </div>
+
+    <!-- modal  -->
+    <div id="modalShadow"></div>
+    <div id="modalBody">
+        <div id="modalMessage"></div>
+        <button id="modalButton">Play Again?</button>
+    </div>
+
+
+</body>
+</html>
