--- a/g4_frogriders/index.html
+++ b/g4_frogriders/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Concert+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src = assets/js/modal.js></script>
+    <script src = 'assets/js/modal.js'></script>
     <script src="assets/js/frog.js"></script>
     <script src="assets/js/player.js"></script>
     <script src="assets/js/board.js"></script>
@@ -15,7 +15,7 @@
 
 
     <title>Frogriders</title>
-    <!-- <link rel="stylesheet" href="../frogriders/assets/css/style.css"> -->
+
 </head>
 <body>
     <header>Frogrider Online!</header>
@@ -32,7 +32,6 @@
         </div>
     </div>
 
-    <!-- modal  -->
     <div id="modalShadow"></div>
     <div id="modalBody">
         <div id="modalMessage"></div>
